fixed scroll on overflowY and dates on json

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: 'Poppins', 'Montserrat', sans-serif;
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: auto;
 }
 
@@ -11,7 +11,6 @@ html,
 #root {
   height: 100%;
   margin: 0;
-  overflow: hidden;
   font-weight: 700;
   letter-spacing: .05rem;
 }
